MAJOR: OAuth2, Fixes for Hitlists
